# python00

./: .gitignore
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py  tester.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py
ex09/: Makefile  README  ft_package-0.0.1-py3-none-any.whl  requirement.txt  setup.py
ex09/ft_package/: LICENSE  Makefile  __init__.py  pyproject.toml  requirement.txt
ex09/ft_package.egg-info/: SOURCES.txt
ex09/ft_package/ft_package.egg-info/: PKG-INFO  SOURCES.txt
